--- a/src/main/webapp/WEB-INF/view/admin/tasks/list.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/list.html
@@ -97,7 +97,7 @@
         </div>
     </div>
 
-    <ul class="actions text-center" style="width: 50%; min-width: 25rem; margin-bottom: 1rem">
+    <ul class="actions text-center" style="width: 50%; min-width: 25rem; margin-bottom: 1rem; margin-top: .5rem">
         <li style="width: 100%">
             <a th:href="@{/tasks/add}" class="abutton">Создать новую задачу</a>
         </li>
