--- a/src/main/webapp/WEB-INF/view/admin/tasks/tasks-table.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/tasks-table.html
@@ -1,7 +1,7 @@
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
 
 <div id="tasks-table" style="overflow: auto">
-    <table class="table border center" aria-describedby="title">
+    <table class="table border center" aria-describedby="title" style="margin-bottom: 0">
         <tr style="text-align: center">
             <th id="index" style="vertical-align: middle">№</th>
             <th id="title" style="vertical-align: middle">Заголовок</th>
