--- a/src/main/webapp/WEB-INF/view/admin/tasks/preview.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/preview.html
@@ -106,9 +106,9 @@
         </div>
     </div>
 
-    <!--/*@thymesVar id="task" type="ru.spbu.distolymp.dto.admin.tasks.tasks.TaskViewDto"*/-->
+    <!--/*@thymesVar id="task" type="ru.spbu.distolymp.dto.admin.tasks.TaskViewDto"*/-->
     <!--/*@thymesVar id="answer" type="ru.spbu.distolymp.dto.entity.answers.AnswerDto"*/-->
-    <!--/*@thymesVar id="result" type="ru.spbu.distolymp.dto.admin.tasks.tasks.TaskPreviewResultDto"*/-->
+    <!--/*@thymesVar id="result" type="ru.spbu.distolymp.dto.admin.tasks.TaskPreviewResultDto"*/-->
     <div class="mb-2" style="border-color: black; border-width: 1px; border-style: solid">
         <div style="margin: .5rem; overflow-wrap: anywhere; overflow: auto">
             <img th:src="@{/img/tasks/{imageName}(imageName=${task.imageFileName})}"
