Added the list of all tests

--- a/src/main/webapp/WEB-INF/view/fragments/menu-staff.html
+++ b/src/main/webapp/WEB-INF/view/fragments/menu-staff.html
@@ -6,7 +6,7 @@
         <a href="#">Модели</a>
     </li>
     <li>
-        <a href="#">Тесты</a>
+        <a th:href="@{/tests/list}">Тесты</a>
     </li>
     <li>
         <a th:href="@{/tasks/list}">Задачи</a>
