--- a/src/main/webapp/WEB-INF/view/admin/tests/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/tests/edit.html
@@ -145,7 +145,7 @@
                     </div>
                     <div class="col-9">
                         <label for="isHidden" class="form-check-label" style="width: auto">
-                            Не показывать результат пользователю
+                            Не показывать результаты пользователю
                         </label>
                     </div>
                 </div>
