Added the list of all models

--- a/src/main/webapp/WEB-INF/view/fragments/menu-staff.html
+++ b/src/main/webapp/WEB-INF/view/fragments/menu-staff.html
@@ -3,7 +3,7 @@
 
 <ul id="menustaff">
     <li>
-        <a href="#">Модели</a>
+        <a th:href="@{/models/list}">Модели</a>
     </li>
     <li>
         <a th:href="@{/tests/list}">Тесты</a>
