--- a/src/main/webapp/WEB-INF/view/admin/tasks/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/edit.html
@@ -119,15 +119,15 @@
                                             </button>
                                         </div>
                                         <div class="modal-body text-center" style="overflow: auto; margin: 1rem; padding: 0">
-                                            <img th:src="@{/img/tasks/{imageName}(imageName=${task.imageFileName})}"
+                                            <img th:src="@{/data/tasks/{imageName}(imageName=${task.imageFileName})}"
                                                  th:onerror="'this.src=\'' + @{/img/image-not-found.png} + '\';'"
                                                  alt="Image not found" th:if="${task.width == 0 and task.height != 0}"
                                                  th:style="'height:' + ${task.height} + 'px'"/>
-                                            <img th:src="@{/img/tasks/{imageName}(imageName=${task.imageFileName})}"
+                                            <img th:src="@{/data/tasks/{imageName}(imageName=${task.imageFileName})}"
                                                  th:onerror="'this.src=\'' + @{/img/image-not-found.png} + '\';'"
                                                  alt="Image not found" th:if="${task.height == 0 and task.width != 0 }"
                                                  th:style="'width:' + ${task.width} + 'px'"/>
-                                            <img th:src="@{/img/tasks/{imageName}(imageName=${task.imageFileName})}"
+                                            <img th:src="@{/data/tasks/{imageName}(imageName=${task.imageFileName})}"
                                                  th:onerror="'this.src=\'' + @{/img/image-not-found.png} + '\';'"
                                                  alt="Image not found" th:if="${task.width != 0 and task.height != 0}"
                                                  th:style="'height: ' + ${task.height} + 'px; width: ' + ${task.width} + 'px'"/>
